--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <html>
 
     <head>
+        <!-- XD this code it the name of the tab on your browser-->
         <title>
-            hello world mutherfucker 
+            Code Create Yik Yak App By DunSanChan
         </title>
     </head>
 
     <body>
+        <h1>CC YIKI YAK</h1>
+        <h2>My Messages</h2>
+        <h2>Global Messages</h2>
+
+        <p1>XD wassup ma boi</p1>
+
     </body>
 
 </html>
