--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     </head>
 
     <body>
-        <h1>CC YIKI YAK</h1>
+        <h1>CC YIK YAK</h1>
         <h2>My Messages</h2>
         <h2>Global Messages</h2>
 
         <p1>XD wassup ma boi</p1>
+        <img src = "stock-vector-cute-yak-cartoon-135751631.jpg" />
 
     </body>
 
