Structuring the page
typing out where everything i have currently planned to be placed in the webapge

--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
     <body>
         <h1>CC YIK YAK</h1>
         <h2>My Messages</h2>
-        <h2>Global Messages</h2>
+        <h2>Global Messages [This should be on the right hand side on the same level of "my messages" ]</h2>
 
         <p1>XD wassup ma boi</p1>
         <img src = "stock-vector-cute-yak-cartoon-135751631.jpg" />
+
+        <h3>This is where u enter ur new message</h3>
+
+        <h3>This is the history of past posts</h3>
+        <h4>-------</h4>
+        <p1>This is a post</p1>
+        <p2>This is the location of the post</p2>
 
     </body>
 
