Properly structured the html
Put in divisions so i can use the css later
and i added structure to the code

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
     <head>
@@ -8,20 +9,27 @@
     </head>
 
     <body>
-        <h1>CC YIK YAK</h1>
-        <h2>My Messages</h2>
-        <h2>Global Messages [This should be on the right hand side on the same level of "my messages" ]</h2>
-
+        <div h>
+            <h1>CC YIK YAK</h1>
+        </div h>
+        <div tabs>
+            <h2>My Messages</h2>
+            <h2>Global Messages [This should be on the right hand side on the same level of "my messages" ]</h2>
+        </div tabs>
         <p1>XD wassup ma boi</p1>
         <img src = "stock-vector-cute-yak-cartoon-135751631.jpg" />
+        <div enterMess>
+            <h3>This is where u enter ur new message</h3>
+        </div enterMess>
+        <div oldMessHead>
+            <h3>This is the history of past posts</h3>
+        </div oldMessHead>
 
-        <h3>This is where u enter ur new message</h3>
-
-        <h3>This is the history of past posts</h3>
-        <h4>-------</h4>
-        <p1>This is a post</p1>
-        <p2>This is the location of the post</p2>
-
+        <div oldMess>
+            <h4>-------</h4>
+            <p1>This is a post</p1>
+            <p2>This is the location of the post</p2>
+        </div oldMess>
     </body>
 
 </html>
