made the page simpler and did some css

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- sign up page/starting page -->
 <html>
 
     <head>
@@ -10,9 +11,6 @@
     </head>
 
     <body>
-        <div id="H">
-            <h1>CC YIK YAK</h1>
-        </div >
         <div id="tabs">
             <div id="SecFirst">
                 <h2>My Messages</h2>
@@ -20,27 +18,20 @@
             <div id="SecSecond">
                 <h2>Global Messages</h2>
             </div>
+            <div id="H">
+                <h2>CC YIK YAK</h2>
+            </div >
         </div >
-        <img id="cuteYak" src = "stock-vector-cute-yak-cartoon-135751631.jpg" alt="cute yak" />
-        <div id="enterMess">
-            <h3>This is where u enter ur new message</h3>
-            <form>
-                New message:<br>
-                <input type="text" name="message ">
-                <br>
-
-            </form>
-
-            <input type="button" value="Post">
-        </div>
-        <div id="oldMessHead">
-            <h3>This is the history of past posts</h3>
+        <div id="signup">
+            <input type="button" value="SIGN UP">
+            <input type="button" value="SIGN IN">
         </div>
 
         <div id="oldMess">
-            <h4>-------</h4>
-            <p1>This is a post</p1>
-            <p2>This is the location of the post</p2>
+            <div id="oldMessHead">
+                <h3>This is the history of past posts</h3>
+            </div>
+
         </div>
     </body>
 
