tried to make a base html templates

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- sign up page/starting page -->
-<html>
+<html lang="en">
 
     <head>
         <!-- XD this code it the name of the tab on your browser-->
