added an image doing some css
added some buttons for signup sign in
trying to make the yak in snow picture cover the whole page
currently header is blue

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     </head>
 
     <body>
+        <div id="H">
+            <h2>CC YIK YAK</h2>
+        </div >
         <div id="tabs">
-            <div id="SecFirst">
+            <!--<div id="SecFirst">
                 <h2>My Messages</h2>
-            </div>
+            </div>-->
             <div id="SecSecond">
                 <h2>Global Messages</h2>
             </div>
-            <div id="H">
-                <h2>CC YIK YAK</h2>
-            </div >
         </div >
-        <div id="signup">
-            <input type="button" value="SIGN UP">
-            <input type="button" value="SIGN IN">
+        <div id="button">
+            <input id="signup" type="button" value="SIGN UP">
+            <input id="signin" type="button" value="SIGN IN">
         </div>
 
         <div id="oldMess">
