deleted unused photos - start page buttons hovering

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>
             Code Create Yik Yak App By DunSanChan
         </title>
+        <script src="test.js"></script>
         <link rel= "stylesheet" type="text/css" href="style.css" />
     </head>
 
@@ -14,23 +15,26 @@
         <div id="H">
             <h2>CC YIK YAK</h2>
         </div >
-        <div id="tabs">
-            <!--<div id="SecFirst">
-                <h2>My Messages</h2>
-            </div>-->
-            <div id="SecSecond">
-                <h2>Global Messages</h2>
-            </div>
-        </div >
         <div id="button">
             <input id="signup" type="button" value="SIGN UP">
             <input id="signin" type="button" value="SIGN IN">
         </div>
-
-        <div id="oldMess">
-            <div id="oldMessHead">
-                <h3>This is the history of past posts</h3>
+        <div id="tabs">
+            <!--<div id="SecFirst">
+                <h2>My Messages</h2>
+            </div>-->
+            <div id="GlobalSec">
+                <div id="SecSecond">
+                    <h2>Global Messages</h2>
+                </div>
+                <div id="Gposts">
+                    
+                    <!-- this is meant to show all posts-->
+                    <p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tincidunt lectus sit amet tellus varius gravida. Pellentesque ultricies tortor sed libero gravida, eget condimentum nisi
+                    </p1>
+                </div>
             </div>
+        </div >
 
         </div>
     </body>
