--- a/start_login.html
+++ b/start_login.html
@@ -1,7 +1,36 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<!-- sign up page/starting page -->
+<html lang="en">
 
-{% block body_contents %}
+    <head>
+        <!-- XD this code it the name of the tab on your browser-->
+        <title>
+            Code Create Yik Yak App By DunSanChan
+        </title>
+        <link rel= "stylesheet" type="text/css" href="style.css" />
+    </head>
 
-<div 
+    <body>
+        <div id="H">
+            <h2>CC YIK YAK</h2>
+        </div >
+        <div id="tabs">
+            <div id="SecFirst">
+                <h2>My Messages</h2>
+            </div>
+            <div id="GlobalSec">
+                <div id="SecSecond">
+                    <h2>Global Messages</h2>
+                </div>
+                <div id="Gposts">
+                    <!-- this is meant to show all posts-->
+                    <p1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tincidunt lectus sit amet tellus varius gravida. Pellentesque ultricies tortor sed libero gravida, eget condimentum nisi
+                    </p1>
+                </div>
+            </div>
+        </div >
 
-{% endblock %}
+        </div>
+    </body>
+
+</html>
